Fix layout issue on mobile view

--- a/style.css
+++ b/style.css
@@ -47,12 +47,10 @@ nav{
     display: flex;
     justify-content: space-between;
      margin: 20px 200px;
-}
-nav h1 {
-    border: 1px solid rgba(0, 0, 0, 1);
-    color: white; 
+    
 }
 .navbar{
+    
     display: flex;
     gap: 360px;
 }
@@ -72,10 +70,12 @@ nav h1 {
     background-image: url(./assets/hero-bg.png);
      background-size: cover;
   background-position: center;
+  height: 7;
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 5px;
+    border-top: 1px solid rgba(65, 37, 103, 1);
 }
 
 .hero-img_container{
@@ -113,10 +113,13 @@ padding: 14px 14px 6px 14px;
  top: 5%;
  left: 80%;
 }
+.hero-p{
+    margin-top: -20px;
+}
 .hero-btn_container{
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 10px;
      gap: 10px;
 }
 .button1{
@@ -133,6 +136,7 @@ background:none
     justify-content: center;
     text-align: center;
      margin: 20px 200px;
+     margin-top: 100px;
  }
  .card-head{
  font-size: 48px;
@@ -201,7 +205,7 @@ background: rgba(53, 17, 101, 0.4);
 }
 
 .features{
- width: 300px;
+ width: 350px;
  height: 440px;
 border-radius:  24px ;
 background: rgba(37, 13, 68, 1);  
@@ -217,10 +221,12 @@ justify-items: center;
 }
 iframe{
   border-radius: 24px 24px 0px 0px;
+  
 }
 .meet-section{
     margin: 20px 200px;
     margin-top: 100px;
+   
 }
 .meet-container{
     display: flex;
@@ -230,11 +236,13 @@ iframe{
     border-radius: 40px;
     padding: 40px;
     gap: 24px;
+    
 }
 footer{
     background-image: url(./assets/footer-bg.png);
   background-size: cover;
   background-position: center;
+  min-height: 300px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -280,9 +288,10 @@ height: 20px;
     body>*{
     margin: 0;
 }
-    .section-title{
+ 
+  .section-title{
 font-size: 32px;
-margin-top: 10px;
+margin-top: 2px;
 margin-bottom: 10px;
 }
     .navbar{
@@ -320,9 +329,12 @@ margin-bottom: 10px;
 }
 
 
-.about ,.choose-box  ,.feature-container ,.meet-section,.hero-section ,footer {
+.about ,.choose-box  ,.meet-section,.hero-section ,footer ,.feature-container {
    
     margin: 20px 2px;
+}
+.hero-p{
+    margin-top: 20px;
 }
 .card-head{
  font-size: 40px;
@@ -353,8 +365,8 @@ margin-bottom: 10px;
 .box-4{
     padding-bottom: 40px;
 }
+
 .feature-container {
-   
     grid-template-columns: repeat(1, 1fr);
 }
 .features{
@@ -365,11 +377,26 @@ margin-bottom: 10px;
     text-align: center;
     gap: 10px;
 }
-.footer-title {
-    font-size: 40px;
-}
+
 .icon-container {
     grid-template-columns: repeat(2, 1fr);
     padding: 2px;
 }
+.footer-title {
+    font-size: 40px;
+}
+.footer-content {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 30px;
+  }
+
+  .footer-title {
+    font-size: 36px;
+  }
+
+  footer {
+    min-height: 250px;
+   
+  }
+
  }
